--- a/Lab12/StyleSheet.css
+++ b/Lab12/StyleSheet.css
@@ -1,6 +1,6 @@
 .Body 
 {
-    background-image: linear-gradient(90deg, lightgrey, lightblue);
+    background-image: linear-gradient(90deg, grey, slategrey);
 }
 
 h2
@@ -93,12 +93,6 @@ footer div
     background-color: lightgray;
     padding: .5em;
     color: white;  
-
-    /* -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
-    background-color: #f1f1f1;
-    padding: 10px; */
 }
 
 footer div span
@@ -117,9 +111,23 @@ footer div span
         padding: 30px;  
         margin: 5px;
     }
+
+    .col:hover
+    {
+        background-color: darkgreen;
+        box-shadow: 6px 4px darkgreen;
+        font-weight: bold;
+    }
+
     #Footer
     {
         display: none;
+    }
+
+    header p:before
+    {
+        color: black;
+        content: "(max-width: 600px) ";
     }
 } 
 
@@ -133,11 +141,18 @@ footer div span
         padding: 30px;  
         margin: 5px;
     }
+
     .col:hover
     {
         background-color: darkgreen;
         box-shadow: 6px 4px darkgreen;
         font-weight: bold;
+    }
+
+    header p:before
+    {
+        color: black;
+        content: "(min-width: 600px) and (max-width: 767px)";
     }
 } 
 
@@ -147,6 +162,21 @@ footer div span
     .col
     {
         width: 35%;
+        float: left;
+        padding: 30px;  
+        margin: 5px;
+    }
+    .col:hover
+    {
+        background-color: darkgreen;
+        box-shadow: 6px 4px darkgreen;
+        font-weight: bold;
+    }
+
+    header p:before
+    {
+        color: black;
+        content: "(min-width: 768px) and (max-width: 991px)";
     }
 } 
 
@@ -155,8 +185,24 @@ footer div span
 {
     .col
     {      
-        width: 60%;        
+        width: 60%;  
+        float: left;
+        padding: 30px;  
+        margin: 5px;      
     }    
+
+    .col:hover
+    {
+        background-color: darkgreen;
+        box-shadow: 6px 4px darkgreen;
+        font-weight: bold;
+    }
+
+    header p:before
+    {
+        color: black;
+        content: "(min-width: 992px) and (max-width: 1199px)";
+    }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -164,172 +210,15 @@ footer div span
 {
     .col
     {       
-        width: 15%;        
+        width: 15%; 
+        float: left;
+        padding: 30px;  
+        margin: 5px;       
     } 
+    .col:hover
+    {
+        background-color: darkgreen;
+        box-shadow: 6px 4px darkgreen;
+        font-weight: bold;
+    }
 }
-
-
-
-
-/*
- * Made by Erik Terwan
- * 24th of November 2015
- * MIT License
- *
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
-
- /* body
- {
-   margin: 0;
-   padding: 0;
-   
-   /* make it look decent enough */
-   background: #232323;
-   color: #cdcdcd;
-   font-family: "Avenir Next", "Avenir", sans-serif;
- }
- 
- a
- {
-   text-decoration: none;
-   color: #232323;
-   
-   transition: color 0.3s ease;
- }
- 
- a:hover
- {
-   color: tomato;
- } */
- 
- #menuToggle
- {
-   display: block;
-   position: relative;
-   top: 50px;
-   left: 50px;
-   
-   z-index: 1;
-   
-   -webkit-user-select: none;
-   user-select: none;
- }
- 
- #menuToggle input
- {
-   display: block;
-   width: 40px;
-   height: 32px;
-   position: absolute;
-   top: -7px;
-   left: -5px;
-   
-   cursor: pointer;
-   
-   opacity: 0; /* hide this */
-   z-index: 2; /* and place it over the hamburger */
-   
-   -webkit-touch-callout: none;
- }
- 
- /*
-  * Just a quick hamburger
-  */
- #menuToggle span
- {
-   display: block;
-   width: 33px;
-   height: 4px;
-   margin-bottom: 5px;
-   position: relative;
-   
-   background: #cdcdcd;
-   border-radius: 3px;
-   
-   z-index: 1;
-   
-   transform-origin: 4px 0px;
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0.55s ease;
- }
- 
- #menuToggle span:first-child
- {
-   transform-origin: 0% 0%;
- }
- 
- #menuToggle span:nth-last-child(2)
- {
-   transform-origin: 0% 100%;
- }
- 
- /* 
-  * Transform all the slices of hamburger
-  * into a crossmark.
-  */
- #menuToggle input:checked ~ span
- {
-   opacity: 1;
-   transform: rotate(45deg) translate(-2px, -1px);
-   background: #232323;
- }
- 
- /*
-  * But let's hide the middle one.
-  */
- #menuToggle input:checked ~ span:nth-last-child(3)
- {
-   opacity: 0;
-   transform: rotate(0deg) scale(0.2, 0.2);
- }
- 
- /*
-  * Ohyeah and the last one should go the other direction
-  */
- #menuToggle input:checked ~ span:nth-last-child(2)
- {
-   transform: rotate(-45deg) translate(0, -1px);
- }
- 
- /*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
- #menu
- {
-   position: absolute;
-   width: 300px;
-   margin: -100px 0 0 -50px;
-   padding: 50px;
-   padding-top: 125px;
-   
-   background: #ededed;
-   list-style-type: none;
-   -webkit-font-smoothing: antialiased;
-   /* to stop flickering of text in safari */
-   
-   transform-origin: 0% 0%;
-   transform: translate(-100%, 0);
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
- }
- 
- #menu li
- {
-   padding: 10px 0;
-   font-size: 22px;
- }
- 
- /*
-  * And let's slide it in from the left
-  */
- #menuToggle input:checked ~ ul
- {
-   transform: none;
- }
