--- a/Final_Part_2/home.css
+++ b/Final_Part_2/home.css
@@ -3,6 +3,17 @@ footer
     display: none;
 }
 
+li 
+{
+    text-overflow: initial;
+}
+
+section 
+{
+    margin : 5px;
+}
+
+
 #location:required
 {
     background-color: yellow;
@@ -13,15 +24,20 @@ footer
     background-color: yellow;
 }
 
+#localShelterId:required
+{
+    background-color: yellow;
+}
+
+#findByBreed:required
+{
+    background-color: yellow;
+}
+
 #findAPet
 {
     padding: 5px;
     background-color: lightgray;
-}
-
-li 
-{
-    text-overflow: initial;
 }
 
 #findLocalShelter
@@ -30,9 +46,16 @@ li
     background-color: lightgreen;
 }
 
-article 
+#findPetInShelter
 {
-    margin : 5px;
+    padding: 5px;
+    background-color: lightsalmon;
+}
+
+#findABreed
+{
+    padding : 5px;
+    background-color: red;    
 }
 
 #localShelters
@@ -43,4 +66,9 @@ article
 #petResults
 {
     display : none; 
+}
+
+#localPet
+{
+    display : none;
 }
